# thought-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ablation.md  comparison.md
src/thought/: __init__.py  cli.py  clients.py  config.py  demo.py  memory.py  models.py  server.py
src/thought/adapters/: claude_sdk.py
src/thought/consolidation/: engine.py
src/thought/embeddings/: base.py  deterministic.py  ollama.py  openai_compat.py  sentence_transformer.py
src/thought/hooks/: install.py  recall.py  setup.py  write.py
src/thought/ingest/: entities.py  pipeline.py
src/thought/ingest/code/: _common.py  ast_extractor.py  call_graph.py  git_pipeline.py  git_walker.py  go_extractor.py  java_extractor.py  php_extractor.py  pipeline.py  python_extractor.py  rust_extractor.py  types.py  typescript_extractor.py
src/thought/layers/: code.py  graph.py  temporal.py  vector.py
src/thought/query/: ask.py  cypher.py  views.py
src/thought/router/: classifier.py  dispatcher.py  rules.yaml
src/thought/storage/: base.py
src/thought/storage/sqlite/: backend.py
src/thought/storage/sqlite/migrations/: 0001_initial.sql  0002_v0.2_code.sql  0003_views.sql  0004_agents.sql
tests/comparison/: ablation.py  karpathy_simulator.py  ob1_simulator.py  run.py  workload.py
tests/fixtures/code/python/: auth.py  calls.py
tests/fixtures/code/typescript/: auth.ts
tests/integration/: test_auto_memory_loop.py  test_mcp_http_smoke.py  test_mcp_stdio_e2e.py
tests/perf/: test_scale_invariance.py
tests/unit/: test_ast_extractor.py  test_call_graph.py  test_cli.py  test_clients.py  test_code_ingest.py  test_code_layer.py  test_consolidation.py  test_db_lifecycle.py  test_demo.py  test_embeddings.py  test_embeddings_ollama.py  test_embeddings_openai_compat.py  test_git_walker.py  test_graph_layer.py  test_hook_recall.py  test_hook_write.py  test_ingest.py  test_local_llm_setup.py  test_memory_facade.py  test_query_cypher.py  test_router.py  test_server.py  test_server_tools.py  test_storage_sqlite.py  test_temporal_layer.py  test_topic_browse.py  test_typescript_extractor.py  test_upgrade.py  test_v05.py  test_vector_layer.py
