[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "thought-mcp"
version = "0.4.0"
description = "THOUGHT — Temporal Hierarchical Object Union & Graph Hybrid Toolkit. A local MCP memory server with bi-temporal graph + vector + temporal layers, a query router, and a consolidation engine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Richard Barrett" }]
keywords = ["mcp", "memory", "llm", "knowledge-graph", "graphrag", "vector-search", "temporal", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "structlog>=24.1",
    "python-ulid>=2.7",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "psutil>=5.9",
    "sqlite-vec>=0.1.6",
    "rich>=13.0",
    # The MCP server can't start without these — they're not really optional
    # for the typical install path (``thought serve``). The ``[mcp]`` extra is
    # kept as an alias for backward compatibility but is now a no-op.
    "mcp>=1.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.9"]
code = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
]
git = ["pygit2>=1.15"]
embeddings-local = ["sentence-transformers>=2.7"]
embeddings-openai = ["openai>=1.30"]
embeddings-bge = ["FlagEmbedding>=1.2"]
ner = ["spacy>=3.7"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.3"]
llm-anthropic = ["anthropic>=0.30"]
llm-openai = ["openai>=1.30"]
llm-ollama = ["httpx>=0.27"]
sqlite-vec = ["sqlite-vec>=0.1.6"]
all = [
    "thought-mcp[mcp,embeddings-local,ner,sqlite-vec,code,git]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[project.scripts]
thought = "thought.cli:app"

[project.urls]
Homepage = "https://github.com/RNBBarrett/thought-mcp"
Documentation = "https://github.com/RNBBarrett/thought-mcp#readme"
Issues = "https://github.com/RNBBarrett/thought-mcp/issues"
Source = "https://github.com/RNBBarrett/thought-mcp"
Changelog = "https://github.com/RNBBarrett/thought-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/thought"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring services or longer runtime",
    "perf: performance benchmarks",
    "postgres: tests requiring a Postgres backend (skip if $PG_URL unset)",
    "comparison: tests in the comparison harness",
]

[tool.coverage.run]
source = ["src/thought"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "SIM", "C4"]
ignore = [
    "E501",   # line too long — black/ruff format handles this
    "RUF001", # ambiguous unicode in strings  — we use × / α / − deliberately
    "RUF002", # ambiguous unicode in docstrings — same reason
    "RUF003", # ambiguous unicode in comments — same reason
    "SIM105", # contextlib.suppress — try/except/pass is clearer for one-liners
    "SIM108", # ternary — sometimes if/else is clearer
    "B008",   # function call in arg default — Typer's intended API for typer.Option
]

[tool.ruff.lint.per-file-ignores]
# cli.py reconfigures stdio to UTF-8 before importing typer/rich; that has to
# come BEFORE those imports run, so E402 is intentional here.
"src/thought/cli.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
explicit_package_bases = true
mypy_path = "src"
